# llmbeans

./: .gitignore  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml  run_cli_demo.py  test_cli.py  test_cli_imports.py  test_cli_integration.py
adr/: adr.md
llmbeans/: cli.py  main.py
llmbeans-output/: llmbeans-start.bat  llmbeans-start.sh  llmbeans-summary.txt  lmstudio-config.json  run.bat  run.sh  summary.txt
llmbeans/hardware/: detector.py  estimator.py  profiles.json  profiles.py
llmbeans/models/: scanner.py
llmbeans/output/: script_gen.py
llmbeans/recommenders/: __init__.py  engine.py  registry.py  script_gen.py
llmbeans/recommenders/tools/: __init__.py  llamacpp.py  lmstudio.py  mlx.py  ollama.py  vllm.py
tests/: test_cli.py
